Added author email
I set my name as email because I don't wanna put my email on a public repo and it works pretty good

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,9 @@ languageCode: 'en-us'
 title: 'Bjarne Verschorre'
 enableEmoji: true
 
+author:
+  email: 'Bjarne Verschorre'
+
 outputs:
   home:
   - html
